탈퇴 기록 조회 추가
