# server/common/swagger/Api.yaml
@@ -40,6 +40,22 @@ produces:
   - application/json
 
 definitions:
+  DateModel:
+    type: object
+    properties:
+      startDate:
+        type: string
+      endDate:
+        type: string
+
+  LoginModel:
+    type: object
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+
   ReceiptModel:
     type: object
     properties:
@@ -390,6 +406,38 @@ definitions:
         description: The example name
 
 paths:
+  /user/withdrawal/history:
+    post:
+      tags:
+        - User
+      description: 탈퇴한 사람들 기록 조회
+      parameters:
+        - name: "body"
+          in: "body"
+          schema:
+            $ref: "#/definitions/DateModel"
+      responses:
+        200:
+          description: OK!
+        500:
+          description: KO!
+
+  /user/login:
+    post:
+      tags:
+        - User
+      description: 로그인 API
+      parameters:
+        - name: "body"
+          in: "body"
+          schema:
+            $ref: "#/definitions/LoginModel"
+      responses:
+        200:
+          description: OK!
+        500:
+          description: KO!
+  
   /receipt:
     get:
       tags:
